maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:35: error: expected class or object definition
def vaAuNord(){
^IslandMaze:40: error: Unmatched closing brace '}' ignored here
}
^